# NimporteQuoi

./: CMakeLists.txt  README.md
MISC/test/: test_array.cpp  test_cast.cpp  test_string.cpp  test_vector.cpp
common/: base.hpp  fake_lock.hpp  log.cpp  log.hpp  macros.hpp  test.cpp  test.hpp  time.cpp  time.hpp  type_traits.hpp
common/test/: test_timer.cpp
data_structure/: base_graph.hpp  binary_search_tree.hpp  data_structure.cpp  directed_acyclic_graph.hpp  directed_graph.hpp  graph_algorithms.hpp  heap.hpp  priority_queue.hpp
data_structure/test/: test_graph_algorithms.cpp  test_heap.cpp  test_priority_queue.cpp
factory/: factory.cpp  factory.hpp
factory/test/: test_factory.cpp
file_writer/: mmap_file_writer.cpp  mmap_file_writer.hpp
ipc.wip/: domain_socket_ipc.hpp  managed_shared_memory.hpp  message_channel.hpp
ipc.wip/test/: test_domain_socket_ipc.cpp  test_message_channel.cpp  test_shared_memory.cpp
library_loader/: CMakeLists.txt  class_register.hpp  dependencies.cmake  library_loader.cpp  library_loader.hpp  library_manifest.cpp  library_manifest.hpp
library_loader/test/: test_library_loader.cpp
library_loader/test_lib/: liblibrary_animal_1.dylib  liblibrary_animal_2.dylib  library_animal.hpp  library_animal_1.cpp  library_animal_2.cpp
memory_pool/: complexe_memory_pool.hpp  dummy_memory_pool.hpp  memory_pool.cpp  memory_pool.hpp  multi_list_memory_pool.hpp
memory_pool/test/: test_memory_pool.cpp
ring_buffer/: ring_buffer.cpp  ring_buffer.hpp
task_manager.wip/: processor.hpp  task_manager.hpp  task_queue.hpp  task_trigger.hpp  timer_manager.hpp
task_pipeline/: operator.hpp  task_pipeline.hpp
thread_pool/: thread_pool.cpp  thread_pool.hpp
thread_pool/test/: test_thread_pool.cpp
timer/: dependencies.cmake  timer.cpp  timer.hpp
timer/test/: test_timer.cpp
